# mylib

./: CMakeLists.txt  README.md
cmake/: mylibConfig.cmake.in  uninstall.cmake.in
config/: myconfig.h.in
docs/: myadd.3.rst  mymain.1.rst  myminus.3.rst
src/: myadd.cc  mymain.cc  myminus.cc
tests/: add_test.cc  minus_test.cc
